// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint-plugin-html adds integrity if requested 1`] = `
---------------------------------
template-basic.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link
      href="z.css"
      rel="stylesheet"
      integrity="sha256-Q74SycgrBq0ejZ+ml+Itpcffb8CS70NRrTxZTJ027yU="
    />
    <script
      src="template-basic.js"
      type="module"
      integrity="sha256-QAamFdBResqMLdiEYs1XFcWxujo9AQQUdb++c8DCQcE="
    ></script>
  </head>
  <body></body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("./a-LTDY5RBP.js");
  const { B } = await import("./b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
template-basic.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

---------------------------------
template-basic.js
---------------------------------
// fixture/template-basic.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
z.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

`;

exports[`eslint-plugin-html can be used on multiple templates 1`] = `
---------------------------------
template-basic.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link href="z.css" rel="stylesheet" />
    <script src="template-basic.js" type="module"></script>
  </head>
  <body></body>
</html>

---------------------------------
template-complex.html
---------------------------------
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="description" content="Description" />
    <meta name="author" content="John Gozde" />
    <meta name="google" value="notranslate" />
    <link
      rel="apple-touch-icon"
      sizes="180x180"
      href="http://icons.com/icon.png"
    />
    <meta name="theme-color" content="#ffffff" />
    <meta
      name="viewport"
      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
    />
    <title>Complex Template</title>
    <style type="text/css" media="screen, print"></style>
    <link rel="stylesheet" href="https://google.com/fonts" />
    <script>
      window.global = window;
    </script>
  </head>
  <body>
    <div class="app-container"></div>
    <script src="http://google.com/analytics"></script>
  </body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("./a-LTDY5RBP.js");
  const { B } = await import("./b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
template-basic.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

---------------------------------
template-basic.js
---------------------------------
// fixture/template-basic.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
z.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

`;

exports[`eslint-plugin-html can handle multiple entry points 1`] = `
---------------------------------
template-basic.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link href="./deps/z.css" rel="stylesheet" />
    <script src="template-basic.js" type="module"></script>
  </head>
  <body></body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("./a-LTDY5RBP.js");
  const { B } = await import("./b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
chunk-P5OBPOC4.js
---------------------------------

---------------------------------
template-assets.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

/* fixture/template-assets.css */
.assets {
  color: green;
}

---------------------------------
template-basic.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

---------------------------------
template-basic.js
---------------------------------
import "./chunk-P5OBPOC4.js";

// fixture/template-basic.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
template-complex.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

---------------------------------
template-complex.js
---------------------------------
import "./chunk-P5OBPOC4.js";

// fixture/template-complex.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
template-define.css
---------------------------------
/* fixture/template-define.css */
.define {
  color: green;
}

`;

exports[`eslint-plugin-html copies and rebases assets from "href", "src" and "url" (with FS public path) 1`] = `
---------------------------------
template-assets.html
---------------------------------
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="description" content="Description" />
    <meta name="author" content="John Gozde" />
    <meta name="google" value="notranslate" />
    <link rel="apple-touch-icon" sizes="180x180" href="/static/icon.png" />
    <link rel="mask-icon" href="/static/mask.svg" color="#5bbad5" />
    <meta name="theme-color" content="#ffffff" />
    <meta
      name="viewport"
      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
    />
    <title>Complex Template</title>
    <style type="text/css" media="screen, print">
      @font-face {
        font-family: "Open Sans";
        font-weight: 400;
        font-style: normal;
        src: url("/static/font.svg#OpenSans") format("svg");
      }
      @font-face {
        font-family: "Open Sans";
        font-weight: 600;
        font-style: normal;
        src: url("/static/font.svg?OpenSans") format("svg");
      }
      body {
        background: url(/static/bg.png?test#foo);
        content: "url";
      }
    </style>
    <link rel="stylesheet" href="https://google.com/fonts" />
    <link rel="stylesheet" href="/static/custom.css" />
    <link href="/static/template-assets-style.css" rel="stylesheet" />
    <script>
      window.global = window;
    </script>
    <script src="/static/template-assets-script.js" type="module"></script>
  </head>
  <body>
    <div class="app-container"></div>
    <script src="http://google.com/analytics"></script>
  </body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
bg.png
---------------------------------
bg

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("/static/a-LTDY5RBP.js");
  const { B } = await import("/static/b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
custom.css
---------------------------------
body {
  line-height: 1.4;
}

---------------------------------
font.svg
---------------------------------
<svg>font</svg>

---------------------------------
icon.png
---------------------------------
icon

---------------------------------
mask.svg
---------------------------------
<svg>mask</svg>

---------------------------------
template-assets-script.js
---------------------------------
// fixture/template-assets.js
import("/static/c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
template-assets-style.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

/* fixture/template-assets.css */
.assets {
  color: green;
}

`;

exports[`eslint-plugin-html copies and rebases assets from "href", "src" and "url" (with URL public path) 1`] = `
---------------------------------
template-assets.html
---------------------------------
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="description" content="Description" />
    <meta name="author" content="John Gozde" />
    <meta name="google" value="notranslate" />
    <link
      rel="apple-touch-icon"
      sizes="180x180"
      href="http://test.com/icon.png"
    />
    <link rel="mask-icon" href="http://test.com/mask.svg" color="#5bbad5" />
    <meta name="theme-color" content="#ffffff" />
    <meta
      name="viewport"
      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
    />
    <title>Complex Template</title>
    <style type="text/css" media="screen, print">
      @font-face {
        font-family: "Open Sans";
        font-weight: 400;
        font-style: normal;
        src: url("http://test.com/font.svg#OpenSans") format("svg");
      }
      @font-face {
        font-family: "Open Sans";
        font-weight: 600;
        font-style: normal;
        src: url("http://test.com/font.svg?OpenSans") format("svg");
      }
      body {
        background: url(http://test.com/bg.png?test#foo);
        content: "url";
      }
    </style>
    <link rel="stylesheet" href="https://google.com/fonts" />
    <link rel="stylesheet" href="http://test.com/custom.css" />
    <link
      href="http:/test.com/static/template-assets-style.css"
      rel="stylesheet"
    />
    <script>
      window.global = window;
    </script>
    <script
      src="http:/test.com/static/template-assets-script.js"
      type="module"
    ></script>
  </head>
  <body>
    <div class="app-container"></div>
    <script src="http://google.com/analytics"></script>
  </body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
bg.png
---------------------------------
bg

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("http://test.com/static/a-LTDY5RBP.js");
  const { B } = await import("http://test.com/static/b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
custom.css
---------------------------------
body {
  line-height: 1.4;
}

---------------------------------
font.svg
---------------------------------
<svg>font</svg>

---------------------------------
icon.png
---------------------------------
icon

---------------------------------
mask.svg
---------------------------------
<svg>mask</svg>

---------------------------------
template-assets-script.js
---------------------------------
// fixture/template-assets.js
import("http://test.com/static/c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
template-assets-style.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

/* fixture/template-assets.css */
.assets {
  color: green;
}

`;

exports[`eslint-plugin-html copies and rebases assets from "href", "src" and "url" (with no public path) 1`] = `
---------------------------------
template-assets.html
---------------------------------
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="description" content="Description" />
    <meta name="author" content="John Gozde" />
    <meta name="google" value="notranslate" />
    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon.png" />
    <link rel="mask-icon" href="./assets/mask.svg" color="#5bbad5" />
    <meta name="theme-color" content="#ffffff" />
    <meta
      name="viewport"
      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
    />
    <title>Complex Template</title>
    <style type="text/css" media="screen, print">
      @font-face {
        font-family: "Open Sans";
        font-weight: 400;
        font-style: normal;
        src: url("font.svg#OpenSans") format("svg");
      }
      @font-face {
        font-family: "Open Sans";
        font-weight: 600;
        font-style: normal;
        src: url("font.svg?OpenSans") format("svg");
      }
      body {
        background: url(bg.png?test#foo);
        content: "url";
      }
    </style>
    <link rel="stylesheet" href="https://google.com/fonts" />
    <link rel="stylesheet" href="custom.css" />
    <link rel="stylesheet" href="./template-assets.css" />
    <script>
      window.global = window;
    </script>
  </head>
  <body>
    <div class="app-container"></div>
    <script src="http://google.com/analytics"></script>
    <script src="template-assets.js" type="module"></script>
  </body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
bg.png
---------------------------------
bg

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("./a-LTDY5RBP.js");
  const { B } = await import("./b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
custom.css
---------------------------------
/* fixture/assets/custom.css */
body {
  line-height: 1.4;
}

---------------------------------
font.svg
---------------------------------
<svg>font</svg>

---------------------------------
template-assets.js
---------------------------------
// fixture/template-assets.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

`;

exports[`eslint-plugin-html skips asset rebasing/copying if "ignoreAssets" is set 1`] = `
---------------------------------
template-assets.html
---------------------------------
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="description" content="Description" />
    <meta name="author" content="John Gozde" />
    <meta name="google" value="notranslate" />
    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon.png" />
    <link rel="mask-icon" href="./assets/mask.svg" color="#5bbad5" />
    <meta name="theme-color" content="#ffffff" />
    <meta
      name="viewport"
      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
    />
    <title>Complex Template</title>
    <style type="text/css" media="screen, print">
      @font-face {
        font-family: "Open Sans";
        font-weight: 400;
        font-style: normal;
        src: url("./assets/font.svg#OpenSans") format("svg");
      }
      @font-face {
        font-family: "Open Sans";
        font-weight: 600;
        font-style: normal;
        src: url("./assets/font.svg?OpenSans") format("svg");
      }
      body {
        background: url(./assets/bg.png?test#foo);
        content: "url";
      }
    </style>
    <link rel="stylesheet" href="https://google.com/fonts" />
    <link rel="stylesheet" href="./assets/custom.css" />
    <link href="/static/template-assets-style.css" rel="stylesheet" />
    <script>
      window.global = window;
    </script>
    <script src="/static/template-assets-script.js" type="module"></script>
  </head>
  <body>
    <div class="app-container"></div>
    <script src="http://google.com/analytics"></script>
  </body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("/static/a-LTDY5RBP.js");
  const { B } = await import("/static/b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
template-assets-script.js
---------------------------------
// fixture/template-assets.js
import("/static/c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
template-assets-style.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

/* fixture/template-assets.css */
.assets {
  color: green;
}

`;

exports[`eslint-plugin-html substitutes values from "define" in output HTML 1`] = ``;

exports[`eslint-plugin-html uses scripts and styles as entry points for the build 2`] = `
---------------------------------
template-basic.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link href="z.css" rel="stylesheet" />
    <script src="template-basic.js" type="module"></script>
  </head>
  <body></body>
</html>

---------------------------------
a-LTDY5RBP.js
---------------------------------
// fixture/deps/a.js
var A = "a";
export {
  A
};

---------------------------------
b-HIJ6EZP3.js
---------------------------------
// fixture/deps/b.js
var B = "b";
export {
  B
};

---------------------------------
c-RYJBTEBJ.js
---------------------------------
// fixture/deps/c.js
async function C() {
  const { A } = await import("./a-LTDY5RBP.js");
  const { B } = await import("./b-HIJ6EZP3.js");
  return A + B;
}
export {
  C
};

---------------------------------
template-basic.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

---------------------------------
template-basic.js
---------------------------------
// fixture/template-basic.js
import("./c-RYJBTEBJ.js").then(({ C }) => {
  return C();
}).then((output) => {
  console.log(output);
}).catch(() => {
  console.error("whoops");
});

---------------------------------
z.css
---------------------------------
/* fixture/deps/z.css */
.z {
  background-color: black;
}

`;
